fixed top-nav on mobile view

--- a/src/assets/scss/custom/_navigation.scss
+++ b/src/assets/scss/custom/_navigation.scss
@@ -96,7 +96,7 @@
 }
     
     .top-bar-right {
-    margin-left: 15px;
+    margin-left: 30px;
     top: 100px;
 }
   .top-bar-right li a {
